--- a/server/config.env
+++ b/server/config.env
@@ -1,5 +1,3 @@
-PORT_NUMBER = 5000
-
-CONN_STRING = mongodb+srv://ChatSphere-user:vk27zsIkq4E1I69s@cluster0.8qvs77w.mongodb.net/ChatSphere
-
-SECRET_KEY=quick-chat-app
+PORT = 5000
+MONGODB_URI = mongodb+srv://ChatSphere-user:vk27zsIkq4E1I69s@cluster0.8qvs77w.mongodb.net/ChatSphere
+SECRET_KEY = quick-chat-app
